2008-12-04  Lluis Sanchez Gual  <lluis@novell.com>

	* DockItem.cs:
	* DockGroup.cs:
	* DockBarItem.cs: Focusing fixes.

	* Makefile.am: Make it work for parallel build.

2008-10-31  Lluis Sanchez Gual  <lluis@novell.com>

	* DockBarItem.cs: Improved dock item focusing. Close autohide panels
	when pressing Esc.

2008-10-28  Lluis Sanchez Gual  <lluis@novell.com>

	* DockItem.cs:
	* DockBarItem.cs: When presenting an iconized item, give it the focus
	and show it.

	* DockGroup.cs: Focus the item's widget when presenting it.

2008-10-09  Christian Hergert  <chris@dronelabs.com>

	* DockGroup.cs: Fix a nullref when compressing an expanded editor tab
	back to normal size.

2008-09-23  Lluis Sanchez Gual <lluis@novell.com> 

	* DockGroup.cs, DockItem.cs, DockItemBehavior.cs, DockContainer.cs: Add
	  support for sticky dock items, that is, items which when visible,
	  are visible in all layouts.

2008-09-12  Mike Kestner <mkestner@novell.com> 

	* DockContainer.cs:
	* DockFrame.cs:
	Don't iterate directly over internal lists of widgets, since the
	callback can remove the widget and invalidate the enumerator.

2008-09-12  Lluis Sanchez Gual <lluis@novell.com> 

	* MonoDevelop.Dock.mdp: Updated.

2008-07-14  Lluis Sanchez Gual <lluis@novell.com> 

	* AssemblyInfo.cs: Fix copyright header.

2008-07-09  Lluis Sanchez Gual <lluis@novell.com> 

	* DockGroup.cs: RemoveItemRec: don't keep looking if the item has
	  already been removed.

2008-05-26  Lluis Sanchez Gual <lluis@novell.com> 

	* TabStrip.cs: Fix gtk warning.

2008-03-17  Michael Hutchinson <mhutchinson@novell.com> 

	* DockItem.cs: Draw dockable/floating/autohide options as radio
	  buttons, as they behave this way. Thanks to Gabriel Burt for this
	  patch.

2008-03-10  Lluis Sanchez Gual <lluis@novell.com> 

	* DockFrame.cs: Update autohide buttons when the title of an item
	  changes. Fixes bug #368436 - Build Output autohide button missing.

2008-02-18  Lluis Sanchez Gual <lluis@novell.com> 
